--- a/gestao_vagas-api/src/main/resources/application.properties
+++ b/gestao_vagas-api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=gestao_vagas
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
