--- a/gestao_vagas-api/src/main/resources/application.properties
+++ b/gestao_vagas-api/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=gestao_vagas
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+
+security.token.secret=JAVAGAS_@123#
